--- a/functions/package.json
+++ b/functions/package.json
@@ -3,8 +3,9 @@
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "debug": "yarn build && firebase emulators:start --inspect-functions",
-    "serve": "npm run build && firebase emulators:start --only functions",
+    "emulator:others": "firebase emulators:start --only auth,firestore,storage",
+    "emulator:functions": "firebase emulators:start --only functions --inspect-functions",
+    "emulators": "firebase emulators:start --only auth,firestore,storage,functions --inspect-functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
@@ -15,8 +16,9 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "axios": "^0.27.2",
     "firebase-admin": "^10.2.0",
-    "firebase-functions": "^3.21.0"
+    "firebase-functions": "^3.24.1"
   },
   "devDependencies": {
     "typescript": "^4.6.4"
