Binding ui ... STABLE :-))

--- a/functions/package.json
+++ b/functions/package.json
@@ -3,9 +3,8 @@
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "firebase": "firebase emulators:start --only auth,firestore,storage,functions --inspect-functions",
+    "firebase": "npm run build && firebase emulators:start --only auth,firestore,storage,functions --inspect-functions",
     "shell": "npm run build && firebase functions:shell",
-    "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
