--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.12",
     "firebase-admin": "^10.2.0",
     "firebase-functions": "^3.24.1"
   },
