--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "~17.0.2",
     "react-photo-album": "^1.16.1",
     "react-scripts": "~5.0.1",
+    "yet-another-react-lightbox": "^2.1.2",
     "typescript": "~4.7.4"
   },
   "scripts": {
