--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12",
     "firebase-admin": "^10.2.0",
-    "firebase-functions": "^3.24.1"
+    "firebase-functions": "^3.24.1",
+    "googlephotos": "^0.3.5"
   },
   "devDependencies": {
     "typescript": "^4.6.4"
