--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "firebase": "~9.9.4",
     "react": "~17.0.2",
     "react-dom": "~17.0.2",
-    "react-photo-album": "^1.16.1",
+    "react-photo-album": "~1.16.1",
     "yet-another-react-lightbox": "^2.1.2"
   },
   "devDependencies": {
-    "typescript": "~4.7.4",
     "@testing-library/jest-dom": "~5.16.5",
     "@testing-library/react": "~12.1.5",
     "@testing-library/user-event": "~14.4.2",
     "@types/jest": "~27.4.1",
+    "@types/lodash": "^4.14.186",
     "autoprefixer": "~10.4.12",
+    "lodash": "~4.17.21",
     "postcss": "~8.4.17",
-    "react-scripts": "~5.0.1"
+    "react-scripts": "~5.0.1",
+    "typescript": "~4.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
