--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mui/base": "~5.0.0-alpha.100",
     "@types/node": "~16.11.7",
     "@types/react": "~17.0.39",
     "@types/react-dom": "~17.0.11",
@@ -11,7 +10,8 @@
     "react": "~17.0.2",
     "react-dom": "~17.0.2",
     "react-photo-album": "~1.16.1",
-    "yet-another-react-lightbox": "^2.1.2"
+    "daisyui": "^2.31.0",
+    "react-daisyui": "2.4.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "~5.16.5",
@@ -22,7 +22,7 @@
     "autoprefixer": "~10.4.12",
     "lodash": "~4.17.21",
     "postcss": "~8.4.17",
-    "react-scripts": "~5.0.1",
+    "react-scripts": "~4.0.3",
     "typescript": "~4.7.4"
   },
   "scripts": {
