--- a/package.json
+++ b/package.json
@@ -6,20 +6,21 @@
     "@types/node": "~16.11.65",
     "@types/react": "~17.0.39",
     "@types/react-dom": "~17.0.11",
+    "daisyui": "^2.6.4",
     "firebase": "~9.9.4",
-    "react-photo-album": "~1.16.1",
     "react": "~17.0.2",
     "react-dom": "~17.0.2",
-    "daisyui": "^2.6.4"
+    "react-photo-album": "~1.16.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.7",
     "@testing-library/jest-dom": "~5.16.5",
     "@testing-library/react": "~12.1.5",
     "@testing-library/user-event": "~14.4.2",
     "@types/jest": "~27.4.1",
     "@types/lodash": "^4.14.186",
-    "lodash": "~4.17.21",
     "autoprefixer": "~10.4.12",
+    "lodash": "~4.17.21",
     "postcss": "~8.4.17",
     "react-scripts": "~5.0.1",
     "typescript": "~4.7.4"
